Curățare proiect: ștergere fișiere redundante

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db.qwfmdfjkivlfordvorwk.supabase.co;Port=6543;Database=postgres;Username=postgres;Password=Terdem_4006;SslMode=Require;TrustServerCertificate=true;Timeout=30;CommandTimeout=30;Keepalive=30"
+    "DefaultConnection": "Server=localhost;Database=SmartStoreReservation;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
   }
 }
